--- a/packages/common-types/package.json
+++ b/packages/common-types/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "common-types",
-  "version": "1.0.0",
-  "type": "module",
+  "name": "@isu/common-types",
+  "version": "0.0.0",
   "description": "Shared TypeScript types for frontend and backend",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
